--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
   },
   "homepage": "https://github.com/SeanNguyen/ng2-todo-list#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "@angular/common": "^2.0.0-rc.3",
+    "@angular/compiler": "^2.0.0-rc.3",
+    "@angular/core": "^2.0.0-rc.3",
+    "@angular/platform-browser": "^2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
+    "@angular/router": "^3.0.0-alpha.7",
+    "express": "^4.14.0",
+    "rxjs": "^5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   }
 }
