--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
     "@angular/router": "^3.0.0-alpha.7",
     "express": "^4.14.0",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "^5.0.0-beta.6",
+    "systemjs": "^0.19.31",
     "zone.js": "^0.6.12"
   }
 }
