--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   },
   "homepage": "https://github.com/SeanNguyen/ng2-todo-list#readme",
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.3",
-    "@angular/compiler": "^2.0.0-rc.3",
-    "@angular/core": "^2.0.0-rc.3",
-    "@angular/platform-browser": "^2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.3",
-    "@angular/router": "^3.0.0-alpha.7",
-    "express": "^4.14.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.6",
-    "systemjs": "^0.19.31",
-    "zone.js": "^0.6.12"
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/router": "3.0.0-alpha.7",
+    "express": "4.14.0",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.31",
+    "zone.js": "0.6.12"
   }
 }
