--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "2.0.0-rc.3",
     "@angular/router": "3.0.0-alpha.7",
+    "compression": "^1.6.2",
     "express": "4.14.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
