--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "2.0.0-rc.3",
     "@angular/router": "3.0.0-alpha.7",
+    "angular2-localstorage": "^0.4.0",
     "compression": "^1.6.2",
     "express": "4.14.0",
     "lodash": "^4.13.1",
